# playwright-mcp-server

./: .gitignore  README.md  SUMMARY.md  auto_browser_test.py  demo_client.py  list_tools.py  mcp_documentation.txt  pyproject.toml  quick_start_guide.md  requirements.txt  run_demo.py  simple_browser_test.py  test_installation.py  test_real_browser.py  test_server.py  test_syntax.py  what_would_happen.py
examples/: claude_desktop_config.json  usage_example.py
src/playwright_mcp/: __init__.py  cdp_patch.py  server.py
tests/: test_default_antidetect_config.py  test_pixelscan_botcheck.py  test_storage_state_tools.py
